# ERP-AI

./: .dockerignore  .env.example  .env.recovered  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_PLAN.md  Dockerfile  Makefile  README.md  TEST_SMOKE_FLOWS.md  docker-compose.yml  pyproject.toml  requirements-e2e.txt  requirements.txt  test_local.sh  verify_fix.sh
api/: __init__.py  agent_routes.py  analyst_routes.py  analyze_routes.py  approval_routes.py  config_routes.py  document_routes.py  main.py  middleware.py  module_chat_routes.py  reconciliation_routes.py  routes.py
configs/: example.env  llm.env  llm.env.example
core/: __init__.py  config.py  constants.py  errors.py  exceptions.py  json_utils.py  logging.py  paths.py  schemas.py
data_layer/: __init__.py  minio_mock.py  postgres_mock.py  qdrant_mock.py
docs/: ANALYZE_MODULE_DESIGN.md  ANALYZE_REBUILD_PLAN.md  DEVOPS_AUDIT_FIX.md  RELEASE.md  RUNTIME_BASELINE.md  architecture_mapping.md  runbook_dev.md  runbook_prod.md
domain/: __init__.py  enums.py  models.py  schemas.py
governance/: __init__.py  approval_inbox.py  audit_store.py  evidence_store.py
guardrails/: __init__.py  input_validator.py  output_validator.py  policy_checker.py
infra/: Dockerfile.dispatcher  Dockerfile.gateway  Dockerfile.worker  docker-compose.yml
legacy/: debug_db.py
migrations/: 001_init.sql  004_add_business_tables.sql  005_pr7_audit_evidence.sql  006_pr8_approval_inbox.sql  007_pr9_policy_guardrails.sql  008_pr10_data_zones_idempotency.sql  009_pr11_outbox_events.sql  010_pr12_observability.sql  011_seed_vendor_allowlist.sql  012_pr19_idempotency_constraints.sql  013_pr20_forecast_simulation.sql  014_pr21_cfo_insights.sql  015_pr34_jobs_query_history.sql  20250703_agent_action_proposals.sql  20250703_datasets.sql  20250703_ocr_boxes.sql  20260203_action_proposals_module_scope.sql
mock_data/: generator.py
observability/: __init__.py  (+3 more)
(+436 files in other folders)
