[project]
name = "erpx-ai"
version = "2.0.0"
description = "ERPX AI Accounting Platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "data",
    "logs",
    "*.egg-info",
    "migrations/versions/*",
]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top
    "E722",   # bare except
    "E741",   # ambiguous variable name
    "F401",   # unused imports (re-exports)
    "F403",   # star imports
    "F405",   # may be undefined from star import
    "F841",   # local variable assigned but never used
    "B007",   # loop control variable not used
    "B008",   # function call in default argument
    "B006",   # mutable default argument
    "B904",   # raise without from
    "B905",   # zip without strict
    "C414",   # unnecessary list() in sorted()
    "C401",   # unnecessary generator in set()
    "W291",   # trailing whitespace
    "W293",   # blank line contains whitespace
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"tests/*" = ["F401", "F811", "F841"]
"scripts/*" = ["F841", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["src", "api", "core", "services", "domain"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
